--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -4,17 +4,12 @@
   margin: 20px;
   letter-spacing: 0.5px;
 }
-
-/* Bootstrap */
 .container-sm {
   background-color: #FFFFFE;
   border-radius: 24px;
   width: 95vw;
   height: 95vh;
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;    */
+  position: relative;
 }
 
 .mainpage-container {
@@ -41,7 +36,7 @@
 }
 
 .task-container {
-  padding: 20px;
+  padding: 15px 15px 5px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 10px;
   display: flex;
@@ -50,20 +45,89 @@
 }
 
 .task-list h1{
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .task-list h3 {
   border-radius: 5px;
-  font-size: 12px;
+  font-size: 11px;
+  font-weight: 700;
   background-color: #FCEEF5;
+  color: #571032;
+  padding: 7px;
+  text-align: center;
+  width: fit-content;
+  height: fit-content;
 }
 
 .task-icons {
-  width: 18px;
-  height: 18px;
   display: flex;
   flex-direction: row;
-  margin-right: 15px;
-  gap: 5px;
+  gap: 10px;
+}
+
+.task-icons img {
+  width: 20px;
+  height: 20px;
+}
+
+.add-task-container img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 25px;
+}
+
+/* For add tasks modal */
+.add-task-modal {
+  box-shadow: rgba(99, 99, 99, 0.2) 10px 20px 100px 100px;
+  padding: 15px;
+  margin: 10px;
+  z-index: 1000001;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #FFFFFF;
+  bottom: 150px;
+  border-radius: 10px;
+  letter-spacing: 0px;
+}
+
+.add-task-modal p {
+  font-size: 14px;
+  margin: 0;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.add-task-modal input, option, select {
+  margin-bottom: 10px;
+  border-radius: 10px;
+  height: 50px;
+  border: none;
+  background-color: #FCEEF5;
+  padding: 12px;
+  font-size: 15px;
+  font-weight: 300;
+  font-family: "Inter", sans-serif;
+}
+
+.add-task-modal select {
+  height: 50px;
+}
+
+.add-task-button {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  height: 40px;
+  background-color: #E53170;
+  color: #FFFFFF;
+  border: none;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.add-task-button:hover {
+  background-color: #AC1754
 }
