--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -1,14 +1,14 @@
 #bootstrap-overrides {
-  font-family: "Inter", sans-serif;
-  background-color: #B07289;
-  margin: 20px;
   letter-spacing: 0.5px;
 }
+
+#error-message {
+  color: #FF0000;
+  font-weight: 300;
+  text-align: center;
+}
+
 .container-sm {
-  background-color: #FFFFFE;
-  border-radius: 24px;
-  width: 95vw;
-  height: 95vh;
   position: relative;
 }
 
@@ -17,18 +17,19 @@
 }
 
 .mainpage-title {
-  font-size: 24px;
-  font-weight: 900;
+  font-size: 22px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .mainpage-subtitle {
   font-size: 16px;
-  font-weight: 900;
-  margin-top: 24px;
+  font-weight: 700;
+  margin-top: 20px;
 }
 
 .mainpage-date {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   margin-top: 24px;
   margin-bottom: 20px;
@@ -51,7 +52,7 @@
 .task-list h3 {
   border-radius: 5px;
   font-size: 11px;
-  font-weight: 700;
+  font-weight: 500;
   background-color: #FCEEF5;
   color: #571032;
   padding: 7px;
@@ -82,13 +83,13 @@
 .add-task-modal {
   box-shadow: rgba(99, 99, 99, 0.2) 10px 20px 100px 100px;
   padding: 15px;
-  margin: 10px;
+  margin: 8px;
   z-index: 1000001;
   position: relative;
   display: flex;
   flex-direction: column;
   background-color: #FFFFFF;
-  bottom: 150px;
+  bottom: 170px;
   border-radius: 10px;
   letter-spacing: 0px;
 }
@@ -96,24 +97,25 @@
 .add-task-modal p {
   font-size: 14px;
   margin: 0;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 10px;
 }
 
 .add-task-modal input, option, select {
   margin-bottom: 10px;
   border-radius: 10px;
-  height: 50px;
+  height: 40px;
   border: none;
   background-color: #FCEEF5;
   padding: 12px;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 300;
   font-family: "Inter", sans-serif;
 }
 
 .add-task-modal select {
-  height: 50px;
+  height: 45px;
+  font-size: 14px;
 }
 
 .add-task-button {
@@ -122,10 +124,10 @@
   border-radius: 10px;
   height: 40px;
   background-color: #E53170;
-  color: #FFFFFF;
+  color: #FFF;
   border: none;
-  font-weight: 500;
   letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .add-task-button:hover {
