Formatting display date

--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -32,8 +32,7 @@
 .mainpage-date {
   font-size: 14px;
   font-weight: 700;
-  margin-top: 24px;
-  margin-bottom: 20px;
+  margin: 24px 0 10px 5px;
   color: #E53170;
 }
 
