--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -23,7 +23,7 @@
   text-transform: uppercase;
 }
 
-.mainpage-subtitle {
+.category {
   font-size: 16px;
   font-weight: 700;
   margin-top: 20px;
@@ -34,6 +34,7 @@
   font-weight: 700;
   margin: 24px 0 10px 5px;
   color: #E53170;
+  text-transform: none;
 }
 
 #task-container {
@@ -57,6 +58,7 @@
   font-size: 14px;
   font-weight: 400;
   margin-left: 2px;
+  text-transform: none;
 }
 
 .task-list h3 {
@@ -69,6 +71,7 @@
   text-align: center;
   width: fit-content;
   height: fit-content;
+  text-transform: none;
 }
 
 .task-icons {
