Polishing the sort and initial commit on edit task functionality

--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -20,13 +20,13 @@
 .mainpage-title {
   font-size: 22px;
   font-weight: 700;
-  text-transform: uppercase;
 }
 
 .category {
   font-size: 16px;
-  font-weight: 700;
-  margin-top: 20px;
+  font-weight: 800;
+  letter-spacing: 0.5px;
+  margin: 20px 0;
 }
 
 .mainpage-date {
@@ -49,9 +49,9 @@
 
 .task-container-wrapper {
   overflow-y: auto;
-  max-height: 450px;
-  height: 450px;
-  margin-top: 10px;
+  max-height: 500px;
+  height: 500px;
+  margin-top: 20px;
 }
 
 .task-list h1{
@@ -162,7 +162,7 @@
   border-radius: 8px;
   padding: 10px;
   position: relative;
-  margin: 8px;
+  margin: 80px 8px;
   bottom: 620px;
   text-align: center;
   box-shadow: rgba(99, 99, 99, 0.2) 10px 20px 100px 100px;
@@ -170,6 +170,7 @@
 
 #no-tasks-container {
   height: 450px;
+  margin-top: 100px;
 }
 
 #no-tasks-container h1 {
