--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -131,7 +131,7 @@
   font-size: 14px;
 }
 
-.task-action-button {
+.task-action-button, .confirm-button, .cancel-button {
   margin-top: 20px;
   margin-bottom: 10px;
   border-radius: 10px;
@@ -153,6 +153,24 @@
   position: absolute;
   right: 20px;
   top: 15px;
+}
+
+/* For delete task modal */
+.delete-task-modal {
+  box-shadow: rgba(99, 99, 99, 0.1) 10px 20px 100px 100px;
+  padding: 15px;
+  z-index: 1000001;
+  position: relative;
+  display: none;
+  flex-direction: column;
+  background-color: #FFFFFF;
+  bottom: 320px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.delete-task-modal p {
+  margin: 0;
 }
 
 #popup-message {
